fix overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,13 +18,13 @@ a {
 }
 
 .sidebar {
-  margin: 0px;
   width: 240px;
   height: 100%;
-  background-color: #02353C;
-  float: left;
-  margin-bottom: -5000px; /* any large number will do */
-  padding-bottom: 4000px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #02353C; 
 }
 
 /*
